# gst_help_tool

./: .env.example  .gitignore  README.md  main.py  mcp_client.py  mcp_client_online.py  mcp_config.json  mcp_server.py  migrate_to_mongo.py  pyproject.toml  requirements.txt  run.sh  spec.md
config/: config.yaml
gst_scraper/: __init__.py  classifier.py  db.py  expander.py  exporter.py  fallback_data.py  fetcher.py  logger.py  models.py  normalizer.py  parser_html.py  parser_pdf.py  validator.py
tests/: conftest.py  test_classifier.py  test_exporter.py  test_normalizer.py  test_validator.py
